--- a/starters/mirror/data-speed-dynamics.html
+++ b/starters/mirror/data-speed-dynamics.html
@@ -29,10 +29,10 @@
       background-color: var(--bg);
       color: var(--fg);
       font-family: var(--font);
-      display: flex;
+      /*display: flex;
       flex-direction: column;
       justify-content: center;
-      align-items: center;
+      align-items: center; */
       margin: var(--margin);
       height: 100vh;
       overflow: hidden;
@@ -73,16 +73,16 @@
     }
 
     #overlay {
-      display: flex;
+      /*display: flex;
       flex-direction: column;
       justify-content: center;
-      align-items: center;
+      align-items: center; */
     }
 
     body.jumbo #overlay {
       position: absolute;
       bottom: 0;
-      margin: 1em;
+      margin: 0% 10% 0% 10%;
     }
   </style>
   <input value="0" id="slider" type="range" min="0" max="1000">
