--- a/starters/mirror/data.html
+++ b/starters/mirror/data.html
@@ -19,7 +19,7 @@
 
     :root {
       --margin: 0.3em;
-      --hue: 200;
+      --hue: 350;
       --font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
       --bg: hsl(var(--hue), 0%, 80%);
       --fg: hsl(var(--hue), 100%, 30%);
@@ -29,11 +29,11 @@
       background-color: var(--bg);
       color: var(--fg);
       font-family: var(--font);
-      display: flex;
+      /* display: flex;
       flex-direction: column;
       justify-content: center;
-      align-items: center;
-      margin: var(--margin);
+      align-items: center; */
+      margin: 0% 10% 0% 10%;
       height: 100vh;
       overflow: hidden;
     }
@@ -41,8 +41,16 @@
     #spot {
       width: 30vmin;
       height: 30vmin;
-      border: 2px solid var(--fg);
-      margin: var(--margin);
+      /* border: 2px solid var(--fg);
+      /*margin: var(--margin);*/
+      position: relative;
+      border-radius: 100%;
+    }
+
+    #slider {
+      margin-top: 5%;
+      margin-bottom: 30px;
+
     }
 
     label {
