Developed more versions of nuanceOfAKind

--- a/starters/NuanceOfAKindV1/index.html
+++ b/starters/NuanceOfAKindV1/index.html
@@ -34,7 +34,8 @@
   body {
     display: flex;
     font-size: 2vw;
-    background-image: url('photo.png');
+    /*     background-image: url('photo.png'); */
+    background-color: black;
     background-size: 120%;
     background-position: 50% 0.1%;
 
@@ -62,6 +63,7 @@
     background-image: -o-linear-gradient(-45deg, rgba(255, 255, 220, .3) 0%, transparent 100%);
     background-image: -ms-linear-gradient(-45deg, rgba(255, 255, 220, .3) 0%, transparent 100%);
     background-color: rgb(43, 43, 43);
+    scale: 30%;
 
   }
 
