--- a/audio/oscillator/index.html
+++ b/audio/oscillator/index.html
@@ -35,7 +35,7 @@
     #freqArea {
       width: 80vw;
       height: 20vh;
-      background-color: hsl(var(--hue), 100%, 10%);
+      background-color: rgb(255, 0, 43);
       border-radius: 0.4em;
     }
   </style>
