--- a/ml/pose/sound1/index.html
+++ b/ml/pose/sound1/index.html
@@ -30,6 +30,8 @@
       font-family: var(--font);
     }
   </style>
+  <button id="play" onclick="audio.play();">Play</button>
+  <button id="pause" onclick="audio.pause();">Pause</button>
   <section>
     <!-- If you're not using the panel, comment-out these lines... -->
     <section class="s" id="sourceSection">
